feat: Members of a group are sorted